src/definitions/elements/input.less
/* ... */
.ui.input > input {
  margin: 0;
  max-width: 100%;
  flex: 1 0 auto;
  outline: none;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  text-align: @textAlign;
  line-height: @lineHeight;

  font-family: @inputFont;
  padding: @padding;

  background: @background;
  border: @border;
  color: @inputColor;
  border-radius: @borderRadius;
  transition: @transition;

  box-shadow: @boxShadow;
}


/*--------------------
      Placeholder
---------------------*/

/* browsers require these rules separate */

.ui.input > input::-webkit-input-placeholder {
  color: @placeholderColor;
}
.ui.input > input::-moz-placeholder {
  color: @placeholderColor;
}
.ui.input > input:-ms-input-placeholder {
  color: @placeholderColor;
}


/*******************************
            States
*******************************/

/*--------------------
        Disabled
---------------------*/

.ui.disabled.input,
.ui.input:not(.disabled) input[disabled] {
  opacity: @disabledOpacity;
}

.ui.disabled.input > input,
.ui.input:not(.disabled) input[disabled] {
  pointer-events: none;
}

/*--------------------
        Active
---------------------*/

.ui.input > input:active,
.ui.input.down input {
  border-color: @downBorderColor;
  background: @downBackground;
  color: @downColor;
  box-shadow: @downBoxShadow;
}

/*--------------------
       Loading
---------------------*/

.ui.loading.loading.input > i.icon:before {
  position: absolute;
  content: '';
  top: 50%;
  left: 50%;

  margin: @loaderMargin;
  width: @loaderSize;
  height: @loaderSize;

  border-radius: @circularRadius;
  border: @loaderLineWidth solid @loaderFillColor;
}
.ui.loading.loading.input > i.icon:after {
  position: absolute;
  content: '';
  top: 50%;
  left: 50%;

  margin: @loaderMargin;
  width: @loaderSize;
  height: @loaderSize;

  animation: loader @loaderSpeed infinite linear;

  border: @loaderLineWidth solid @loaderLineColor;
  border-radius: @circularRadius;

  box-shadow: 0 0 0 1px transparent;
}


/*--------------------
        Focus
---------------------*/

.ui.input.focus > input,
.ui.input > input:focus  {
  border-color: @focusBorderColor;
  background: @focusBackground;
  color: @focusColor;
  box-shadow: @focusBoxShadow;
}
.ui.input.focus > input::-webkit-input-placeholder,
.ui.input > input:focus::-webkit-input-placeholder {
  color: @placeholderFocusColor;
}
.ui.input.focus > input::-moz-placeholder,
.ui.input > input:focus::-moz-placeholder {
  color: @placeholderFocusColor;
}
.ui.input.focus > input:-ms-input-placeholder,
.ui.input > input:focus:-ms-input-placeholder {
  color: @placeholderFocusColor;
}



/*--------------------
        Error
---------------------*/

.ui.input.error > input {
  background-color: @errorBackground;
  border-color: @errorBorder;
  color: @errorColor;
  box-shadow: @errorBoxShadow;
}

/* Error Placeholder */
.ui.input.error > input::-webkit-input-placeholder {
  color: @placeholderErrorColor;
}
.ui.input.error > input::-moz-placeholder {
  color: @placeholderErrorColor;
}
.ui.input.error > input:-ms-input-placeholder {
  color: @placeholderErrorColor !important;
}

/* Focused Error Placeholder */
.ui.input.error > input:focus::-webkit-input-placeholder {
  color: @placeholderErrorFocusColor;
}
.ui.input.error > input:focus::-moz-placeholder {
  color: @placeholderErrorFocusColor;
}
.ui.input.error > input:focus:-ms-input-placeholder {
  color: @placeholderErrorFocusColor !important;
}

/*******************************
           Variations
*******************************/

/*--------------------
      Transparent
---------------------*/


.ui.transparent.input > textarea,
.ui.transparent.input > input {
  border-color: transparent !important;
  background-color: transparent !important;
  padding: 0;
  box-shadow: none !important;
  border-radius: 0 !important;
}
.field .ui.transparent.input > textarea {
  padding: @padding;
}

/* Transparent Icon */
:not(.field) > .ui.transparent.icon.input > i.icon {
  width: @transparentIconWidth;
}
:not(.field) > .ui.transparent.icon.input > input {
  padding-left: 0;
  padding-right: @transparentIconMargin;
}
:not(.field) > .ui.transparent[class*="left icon"].input > input {
  padding-left: @transparentIconMargin;
  padding-right: 0;
}

/* Transparent Inverted */
.ui.transparent.inverted.input {
  color: @transparentInvertedColor;
}
.ui.ui.transparent.inverted.input > textarea,
.ui.ui.transparent.inverted.input > input {
  color: inherit;
}

.ui.transparent.inverted.input > input::-webkit-input-placeholder {
  color: @transparentInvertedPlaceholderColor;
}
.ui.transparent.inverted.input > input::-moz-placeholder {
  color: @transparentInvertedPlaceholderColor;
}
.ui.transparent.inverted.input > input:-ms-input-placeholder {
  color: @transparentInvertedPlaceholderColor;
}


/*--------------------
         Icon
---------------------*/

.ui.icon.input > i.icon {
  cursor: default;
  position: absolute;
  line-height: 1;
  text-align: center;
  top: 0;
  right: 0;
  margin: 0;
  height: 100%;

  width: @iconWidth;
  opacity: @iconOpacity;
  border-radius: 0 @borderRadius @borderRadius 0;
  transition: @iconTransition;
}
.ui.icon.input > i.icon:not(.link) {
  pointer-events: none;
}
.ui.ui.icon.input > textarea,
.ui.ui.icon.input > input {
  padding-right: @iconMargin;
}

.ui.icon.input > i.icon:before,
.ui.icon.input > i.icon:after {
  left: 0;
  position: absolute;
  text-align: center;
  top: 50%;
  width: 100%;
  margin-top: @iconOffset;
}
.ui.icon.input > i.link.icon {
  cursor: pointer;
}
.ui.icon.input > i.circular.icon {
  top: @circularIconVerticalOffset;
  right: @circularIconHorizontalOffset;
}

/* Left Icon Input */
.ui[class*="left icon"].input > i.icon {
  right: auto;
  left: @borderWidth;
  border-radius: @borderRadius 0 0 @borderRadius;
}
.ui[class*="left icon"].input > i.circular.icon {
  right: auto;
  left: @circularIconHorizontalOffset;
}
/* ... */

